# harborshield

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  db.sqlite  docker-compose.dind.yml  docker-compose.yml
.sqlx/: query-04cc3224d23f282a4cbdaaa674014a92fdcded544c109ff25991f355119824a6.json  query-0a51abb8474bf5adb5fe308b2365924a7df567020af38c9f13291380be853452.json  query-0a7a12dc8aa87187d54db50151d2e8001ad24218b9b445323124977da2bcee36.json  query-0b14efc081edf10f6998f0ebea789bf9626bda9a316f96b38c7758849146d94c.json  query-18b0e939dcee8101a9347c7209ddfaa83ffa41c56b5e364e55933868a2b4be36.json  query-338e42b9669f4e9586b8da0e300b6a3a9b9cdeb6ee08220d81fee36ce21dc001.json  query-3a32adf7d72594525396e02692d0a0c324132320e3895a5b3721d7c4b0e9840b.json  query-670d8b7faf7e845e1411565345cfead411a010580dbc591f1fa55f52fe0deed7.json  query-7d4886d86a95e6abcf9f78f79c7531b5c26c7127b4235b16d8c1c4adc7b94891.json  query-7f936ac0609485b058fa4a29eb536ef41f7934bfd38c5dd1442ace1700d80323.json  query-8b46dd856f4c6aedc01714353a7c5822c7a2e83066c1d39fd1d9903a6e1eab64.json  query-a6fc96db5c67ecc2cbabe283d4915278c85681d8dda838c7b08f7163c14db923.json  query-bc1d53854c9ddd5d2e1cf05a7707a2f8a4007ef5f4ec0632c8fbc01569969fcc.json  query-d84ea4197b6d7421e29b202d143843479f08e24c7cfc6e94f90fa5de45197abd.json  query-da311579fe5ea256c87125e578ef30cbd08465397718f5a0a53a57d664452a36.json  query-dad7db3cec6c8f36c206245b778c93700ccc4a0dbeba6b58c2e7d4f7859c0822.json  query-dfa8822279dc889add86ee362d49258cd2493bd73263a581098a8fdbdda7681d.json  query-fc9bfb9525087c8ea530c8ebe7a81f35805bb51fd9554e3771ad530589cc62cb.json  query-prepare.sh
migrations/: 20240101000001_initial_schema.sql  20240102000002_add_map_elements.sql  20240103000003_remove_persistence.sql
src/: error.rs  lib.rs  main.rs  server.rs
src/database/: error.rs  mod.rs  models.rs  operations.rs  schema.sql  tests.rs
src/docker/: compose.rs  error.rs  mod.rs  network.rs  tests.rs
src/handlers/: crud.rs  error.rs  mod.rs  tests.rs  utils.rs
src/nftables/: docker.rs  error.rs  mod.rs  (+1 more)
tests/: integration_tests.rs
(+28 files in other folders)
